* marshal.c (struct dump_arg, struct load_arg): merge taint and   untrust flags into infection as bit flags.

* marshal.c (w_nbyte, clear_dump_arg): infect the buffer as soon
  as appending, because it might have been finalized already at
  exit.  based on a patch by Tomoyuki Chikanaga
  at [ruby-dev:41672].  [Bug #3463]


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_2@28413 b2dd03c8-39d4-4d8f-98ff-823fe69b080e